--- a/Source/ROLib/ROLib.csproj
+++ b/Source/ROLib/ROLib.csproj
@@ -53,13 +53,17 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Modules\ModuleROTAirstreamShield.bak" />
+    <Compile Include="UI\DimensionWindow.cs" />
+    <Compile Include="UI\AbstractWindow.cs" />
+    <None Include="UI\VariantSelectionGUI.cs.bak" />
     <Compile Include="ModelDef\ROLAnimationModule.cs" />
     <Compile Include="ModelDef\ROLAnimState.cs" />
+    <Compile Include="Modules\ModuleRODecoupler.cs" />
+    <Compile Include="Modules\ModuleROTank.cs" />
     <Compile Include="Modules\ROLModelConstraint.cs" />
     <Compile Include="Modules\ROLCollisionHandler.cs" />
     <Compile Include="Modules\ROLFlagDecal.cs" />
     <None Include="Modules\ModuleROTNodeFairing.bak" />
-    <None Include="Modules\ROLModularPart.bak" />
     <Compile Include="Modules\ROLSelectableNodes.cs" />
     <Compile Include="ModelDef\ROLMeshBuilder.cs" />
     <Compile Include="ModelDef\ROLMeshGenerators.cs" />
@@ -78,5 +82,6 @@
     <Compile Include="Utils\ROLStockInterop.cs" />
     <Compile Include="Utils\ROLUtils.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
