--- a/Source/ROLib/ROLib.csproj
+++ b/Source/ROLib/ROLib.csproj
@@ -79,6 +79,7 @@
   <ItemGroup>
     <None Include="Modules\ModuleROTAirstreamShield.bak" />
     <Compile Include="Modules\ModuleROSolar.cs" />
+    <Compile Include="Modules\ROLAnimateEngineHeat.cs" />
     <Compile Include="Modules\ROLDeployableEngine.cs" />
     <Compile Include="ROSolar\SolarTechLimit.cs" />
     <Compile Include="UI\DimensionWindow.cs" />
