Added a Coroutine from ProcParts to stop the Attachment Bugs
This stops UpdateDragCube from being called as players are trying to add a part, especially noticeable in symmetry node attachments.

--- a/Source/ROLib/ROLib.csproj
+++ b/Source/ROLib/ROLib.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Utils\ModuleDefinitionVariantSet.cs" />
     <Compile Include="Utils\ROLAttachNodeUtils.cs" />
     <Compile Include="Utils\ROLConfigNodeUtils.cs" />
+    <Compile Include="Utils\ROLDragCubeUpdater.cs" />
     <Compile Include="Utils\ROLExtensions.cs" />
     <Compile Include="Utils\ROLGameSettings.cs" />
     <Compile Include="Utils\ROLInterfaces.cs" />
