--- a/Source/ROLib/ROLib.csproj
+++ b/Source/ROLib/ROLib.csproj
@@ -101,10 +101,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI\ModelSelectionGUI.cs" />
     <Compile Include="UI\ModelWindow.cs" />
+    <Compile Include="Utils\ProceduralTools\DragCubeTool.cs"/>
     <Compile Include="Utils\ModuleDefinitionVariantSet.cs" />
     <Compile Include="Utils\ROLAttachNodeUtils.cs" />
     <Compile Include="Utils\ROLConfigNodeUtils.cs" />
-    <Compile Include="Utils\ROLDragCubeUpdater.cs" />
     <Compile Include="Utils\ROLExtensions.cs" />
     <Compile Include="Utils\ROLGameSettings.cs" />
     <Compile Include="Utils\ROLInterfaces.cs" />
