--- a/Source/ROLib/ROLib.csproj
+++ b/Source/ROLib/ROLib.csproj
@@ -78,6 +78,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Modules\ModuleROTAirstreamShield.bak" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Modules\ModuleROSolar.cs" />
     <Compile Include="Modules\ROLAnimateEngineHeat.cs" />
     <Compile Include="Modules\ROLDeployableEngine.cs" />
@@ -101,7 +102,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI\ModelSelectionGUI.cs" />
     <Compile Include="UI\ModelWindow.cs" />
-    <Compile Include="Utils\ProceduralTools\DragCubeTool.cs"/>
+    <Compile Include="Utils\ProceduralTools\DragCubeTool.cs" />
     <Compile Include="Utils\ModuleDefinitionVariantSet.cs" />
     <Compile Include="Utils\ROLAttachNodeUtils.cs" />
     <Compile Include="Utils\ROLConfigNodeUtils.cs" />
