ROMaterials Module: change thermal prop. based on selected material
Parts implementing this, get a customization option inside VAB/SPH, for both core & exterior shell material/construction, which in turn affects the thermal properties of the part as a whole.

--- a/Source/ROLib/ROLib.csproj
+++ b/Source/ROLib/ROLib.csproj
@@ -107,6 +107,8 @@
     <Compile Include="ModelDef\ROLModelDefinition.cs" />
     <Compile Include="ModelDef\ROLModelLayout.cs" />
     <Compile Include="ModelDef\ROLModelModule.cs" />
+    <Compile Include="Modules\ModuleROMaterial.cs" />
+    <Compile Include="Modules\PresetROMatarial.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI\ModelSelectionGUI.cs" />
     <Compile Include="UI\ModelWindow.cs" />
@@ -121,6 +123,7 @@
     <Compile Include="Utils\ROLModInterop.cs" />
     <Compile Include="Utils\ROLStockInterop.cs" />
     <Compile Include="Utils\ROLUtils.cs" />
+    <Compile Include="Utils\DREHandler.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
