ModuleROMaterials.cs & PresetROMaterials.cfg
PresetROMaterials.cfg: add variable explanation, cleaned names
ModuleROMaterials.cs:
  - make core choose option inactive by default
  - save core & skin values defined in cfg
  - improve implementation of core preset defined in cfg
  - clean how presetCoreName gets overwriten, make it go through PresetCore
  - move thermal mass calculation in updateGUI function
  - make updateHight function differentiate new skin preset & not

--- a/GameData/ROLib/Data/PresetsROMaterial.cfg
+++ b/GameData/ROLib/Data/PresetsROMaterial.cfg
@@ -1,4 +1,12 @@
 // based on data collected in Source/Notes/Materials.txt 
+// absorptiveConstant: -                        Solar absroptance coefficent, same as stock
+// thermalInsulance: m^2⋅K/kW                   skin to internal heat resistance per area, -> skinInternalConductionMult
+//                                              Σ(skin height / conductivity)
+// SpecificHeatCapacity: J/kg-K or kJ/t-K       -> ThermalmassMult
+// SkinHeight: m                                effects all volume/mass dependent stats
+
+// skinSkinConductivity at the moment unchanged 
+// thermalConductivity at the moment unchanged 
 
 ROThermal_PRESET
 {
@@ -26,7 +34,7 @@ ROThermal_PRESET
     heatShieldBaseCost = 0
     costPerArea = 0
 
-
+    // Layering
     // RCG-Class 1 (white) 0.4318 mm
     // LI-900 5-35 mm
     // Strain Isolator Pad (SIP) 4.06 mm
@@ -61,10 +69,12 @@ ROThermal_PRESET
 
     disableModAblator = true
     heatShieldBaseCost = 0
-    
+
+    // Layering
     // RCG-Class 2 (white) 0.4318 mm
     // LI-2200 25-127 mm
     // Strain Isolator Pad (SIP) 4.06 mm
+
     // ref https://ntrs.nasa.gov/api/citations/20120003438/downloads/20120003438.pdf
     // ref https://www.nasa.gov/centers/kennedy/pdf/167473main_TPS-06rev.pdf
 }
@@ -95,9 +105,11 @@ ROThermal_PRESET
     disableModAblator = true
     heatShieldBaseCost = 0
     
+    // Layering
     // RCG-Class 2 (white) 0.4318 mm
     // LI-900 25-127 mm
     // Strain Isolator Pad (SIP) 4.06 mm
+
     // ref https://ntrs.nasa.gov/api/citations/20120003438/downloads/20120003438.pdf
     // ref https://www.nasa.gov/centers/kennedy/pdf/167473main_TPS-06rev.pdf
 }
@@ -128,9 +140,11 @@ ROThermal_PRESET
     disableModAblator = true
     heatShieldBaseCost = 0
     
+    // Layering
     // RCG-Class 2 (white) 0.4318 mm
     // FRCI-12 25-127 mm
     // Strain Isolator Pad (SIP) 4.06 mm
+    //
     // ref https://ntrs.nasa.gov/api/citations/20120003438/downloads/20120003438.pdf
     // ref https://www.nasa.gov/centers/kennedy/pdf/167473main_TPS-06rev.pdf
 }
@@ -162,9 +176,11 @@ ROThermal_PRESET
     disableModAblator = true
     heatShieldBaseCost = 0
     
+    // Layering
     // RCG-Class 2 (white) 0.4318 mm
     // LI-2200/900 25-127 mm
     // Strain Isolator Pad (SIP) 4.06 mm
+    //
     // Li-2200 tiles = 525, Li-900 tiles = 20,000
     // ref https://ntrs.nasa.gov/api/citations/20120003438/downloads/20120003438.pdf
     // ref https://www.nasa.gov/centers/kennedy/pdf/167473main_TPS-06rev.pdf
@@ -196,6 +212,7 @@ ROThermal_PRESET
     disableModAblator = true
     heatShieldBaseCost = 0
     costPerArea = 0
+
     // Shuttle tot HSRI 479.9 m2, tot RCC 38.0 m2
     // on wing 479.9 * ~0.5 of HSRI, 38.0 * ~0.85 of RCC -> RCC 0.119, HSRI 0.881 (percentage in surface Area)
     // ref https://ntrs.nasa.gov/api/citations/20120003438/downloads/20120003438.pdf
@@ -224,6 +241,8 @@ ROThermal_PRESET
     disableModAblator = true
     heatShieldBaseCost = 0
     costPerArea = 0
+
+    // Layering RCC-Panel -> cavity -> Cerachrome Insulation
     // there is a cavity between RCC panels & the internal insulation, making the panels also radiate inwards
     // inward radiative heat then gets absorbed by the Insulation  
     // Insulation
@@ -340,9 +359,8 @@ ROThermal_PRESET
 
     skinMaxTemp = 1133
     skinSpecificHeatCapacity = 606
-    thermalInsulance = 0.393700787402 // 10 / 25.4
+    thermalInsulance = 0.393700787402 // 5 / 25.4
     skinSkinConductivity = 402
-    emissiveConstant = 0.55
 
     disableModAblator = true
     heatShieldAreaExponent = 1
@@ -353,8 +371,8 @@ ROThermal_PRESET
 
 ROThermal_PRESET
 {
-    name = Internal_Al
-    description = (placeholder as 'genneric' aluminium actualy Al-2024-T6)
+    name = Alluminium Alloy 2024
+    description = Al-2024(-T6) 4.5%Cu, 1.5%Mg, 0.6%Mn
     type = Core
 
     maxTemp = 448
@@ -365,18 +383,17 @@ ROThermal_PRESET
     skinSpecificHeatCapacity = 897
     thermalInsulance = 0.0546448087432 // 10 / 183
     skinSkinConductivity = 183
-    emissiveConstant = 0.3
 
     disableModAblator = true
     heatShieldAreaExponent = 1
     heatShieldBaseCost = 0
     costPerArea = 0
-    restrictors = Tank-Sep-Al, Tank-Sep-Al-HP, Tank-Sep-Al2, Tank-Sep-Al2-HP, Tank-Sep-AlCu, Tank-Sep-AlCu-HP, Tank-Sep-AlLi, Tank-Sep-AlLi-HP, Tank-Iso-Al, Tank-Iso-Al-HP, Tank-Iso-AlCu, Tank-Iso-AlCu-HP, Tank-Iso-AlLi, Tank-Iso-AlLi-HP//, Structural, Fuselage
+    restrictors = Tank-Sep-Al, Tank-Sep-Al-HP, Tank-Sep-Al2, Tank-Sep-Al2-HP, Tank-Sep-AlLi, Tank-Sep-AlLi-HP, Tank-Iso-Al, Tank-Iso-Al-HP, Tank-Iso-AlLi, Tank-Iso-AlLi-HP//, Structural, Fuselage
 }
 
 ROThermal_PRESET
 {
-    name = Internal_Al-2219-T8
+    name = Aluminium Alloy 2219
     description = Aluminium alloy 2219
     type = Core
 
@@ -388,13 +405,12 @@ ROThermal_PRESET
     skinSpecificHeatCapacity = 955
     thermalInsulance = 0.0704225352113 // 10 / 142
     skinSkinConductivity = 142
-    emissiveConstant = 0.3
 
     disableModAblator = true
     heatShieldAreaExponent = 1
     heatShieldBaseCost = 0
     costPerArea = 0
-    restrictors = Tank-Sep-AlCu, Tank-Sep-AlCu-HP//, Structural, Fuselage
+    restrictors = Tank-Sep-AlCu, Tank-Sep-AlCu-HP, Tank-Iso-AlCu, Tank-Iso-AlCu-HP//, Structural, Fuselage
 }
 
 
@@ -410,7 +426,6 @@ ROThermal_PRESET
     name = None
     description = No additional TPS, Values taken from Core
     type = Skin
-    skinSpecificHeatCapacity = 1
 }
 ROThermal_PRESET
 {
