more work on dyna-soar preset. Detailed information is scarce unlike the shuttle. added an excel sheet to ease preset calculation moved temporary part patches for testing in here

--- a/GameData/ROLib/Data/PresetsROMaterial.cfg
+++ b/GameData/ROLib/Data/PresetsROMaterial.cfg
@@ -365,44 +365,52 @@ ROThermal_PRESET
 ROThermal_PRESET
 {
     // needs work thicknes & numbers dont add up Insulation would overheat
-    name = Dyna-Soar X-20
+    name = Dyna-Soar X-20 Cockpit
     description = Dyna-Soar X-20
     type = Skin
 
-    skinMaxTemp = 1750
-    //skinSkinConductivity = 
-    emissiveConstant = 0.90
-
-    //skinHeightMin = 0.012
-    //skinMassPerArea = 22.87948 // 10150 * 0.001 + 48.06 * 0.008 + 8230 * 0.001 * 1.5
-    //thermalInsulance = 133.38464378 // (0.001 / 86 + 0.010 / 0.0750 + 0.001 / 25.2 ) * 1000
-    //skinSpecificHeatCapacity = 387.177088738 // 305.6364 * 0.441773011369 + 1189.1 * 0.0209178432772 + 423 * 0.537309145354
-
-    //skinHeightMax = 0.032 // 
-    //skinMassPerAreaMax = 23.9368 // 10150 * 0.001 + 48.06 * 0.030 + 8230 * 0.001 * 1.5
-    //thermalInsulanceMax = 400.051310447 // (0.001 / 86 + 0.030 / 0.0750 + 0.001 / 25.2 ) * 1000
-    //skinSpecificHeatCapacityMax = 419.378899435 // 305.6364 * 0.424033287657 + 1189.1 * 0.0602336151867 + 423 * 0.515733097156
+    skinMaxTemp = 2200 // not sure if correct
+    emissiveConstant = 0.90 // not sure if correct, usually it becomes lower with higher temperatures
 
     skinHeightMin = 0.006
-    skinMassPerArea = 22.68724 // 10150 * 0.001 + 48.06 * 0.004 + 8230 * 0.001 * 1.5 + // clip flange?
-    thermalInsulance = 53.38464378 // (0.001 / 86 + 0.004 / 0.0750 + 0.001 / 25.2 ) * 1000
-    skinSpecificHeatCapacity = 376.984465453 // 305.6364 * 0.447388047202 + 1189.1 * 0.00847348553636 + 423 * 0.544138467262
+    skinMassPerArea = 29.143006
+    thermalInsulance = 69.6157250808853
+    skinSpecificHeatCapacity = 947.051474182134
 
-    skinHeightMax = 0.012 // 
-    skinMassPerAreaMax = 45.37448 // 10150 * 0.002 + 48.06 * 0.008 + 8230 * 0.002 * 1.5
-    thermalInsulanceMax = 106.717977113 // (0.001 / 86 + 0.030 / 0.0750 + 0.001 / 25.2 ) * 1000
-    skinSpecificHeatCapacityMax = 376.984465453 // 305.6364 * 0.447388047202 + 1189.1 * 0.00847348553636 + 423 * 0.544138467262
+    skinHeightMax = 0.012
+    skinMassPerAreaMax = 442.966218
+    thermalInsulanceMax = 162.550623494201
+    skinSpecificHeatCapacityMax = 2119.02271386713
 
     disableModAblator = true
     heatShieldBaseCost = 0
     costPerArea = 0
-
-    // Layering
-    // Molybdenum Alloy panel
-    // Q-Felt Insulation
-    // Rene 41 rib panely
 }
 
+ROThermal_PRESET
+{
+    // needs work thicknes & numbers dont add up Insulation would overheat
+    name = Dyna-Soar X-20
+    description = Dyna-Soar X-20 (Wings)
+    type = Skin
+
+    skinMaxTemp = 1550 // based on information on Q-Fiber felt
+    emissiveConstant = 0.90 // not sure if correct, usually it becomes lower with higher temperatures
+
+    skinHeightMin = 0.006
+    skinMassPerArea = 17.019688
+    thermalInsulance = 43.2240316716726
+    skinSpecificHeatCapacity = 391.388712695556
+
+    skinHeightMax = 0.012
+    skinMassPerAreaMax = 19.01172
+    thermalInsulanceMax = 107.980169618458
+    skinSpecificHeatCapacityMax = 408.644690117464
+
+    disableModAblator = true
+    heatShieldBaseCost = 0
+    costPerArea = 0
+}
 
 
 /////////////       Core       /////////////  /////////////  /////////////  /////////////  /////////////  /////////////  /////////////  
