fixed excel sheet formula mistake & slightly improved accessibility

--- a/GameData/ROLib/Data/PresetsROMaterial.cfg
+++ b/GameData/ROLib/Data/PresetsROMaterial.cfg
@@ -364,7 +364,7 @@ ROThermal_PRESET
 
 ROThermal_PRESET
 {
-    // needs work thicknes & numbers dont add up Insulation would overheat
+    // not up to date
     name = Dyna-Soar X-20 Cockpit
     description = Dyna-Soar X-20
     type = Skin
@@ -389,7 +389,7 @@ ROThermal_PRESET
 
 ROThermal_PRESET
 {
-    // needs work thicknes & numbers dont add up Insulation would overheat
+    // not up to date
     name = Dyna-Soar X-20
     description = Dyna-Soar X-20 (Wings)
     type = Skin
