tweaked Dyna-Soar layering configuration and added Space Shuttle to excel sheet

--- a/GameData/ROLib/Data/PresetsROMaterial.cfg
+++ b/GameData/ROLib/Data/PresetsROMaterial.cfg
@@ -366,21 +366,21 @@ ROThermal_PRESET
 {
     // not up to date
     name = Dyna-Soar X-20 Cockpit
-    description = Dyna-Soar X-20
+    description = Zirconia Nose & Molybdenum insulated with Q-Felt, rest bolted Rene 41 panels 
     type = Skin
 
-    skinMaxTemp = 2200 // not sure if correct
+    skinMaxTemp = 1800 // not sure if correct
     emissiveConstant = 0.90 // not sure if correct, usually it becomes lower with higher temperatures
 
-    skinHeightMin = 0.006
-    skinMassPerArea = 29.143006
-    thermalInsulance = 69.6157250808853
-    skinSpecificHeatCapacity = 947.051474182134
+    skinHeightMin = 0.013
+    skinMassPerArea = 11.743024
+    thermalInsulance = 48.9023727825677
+    skinSpecificHeatCapacity = 333.710417572169
 
-    skinHeightMax = 0.012
-    skinMassPerAreaMax = 442.966218
-    thermalInsulanceMax = 162.550623494201
-    skinSpecificHeatCapacityMax = 2119.02271386713
+    skinHeightMax = 0.026
+    skinMassPerAreaMax = 80.683026
+    thermalInsulanceMax = 125.213380154277
+    skinSpecificHeatCapacityMax = 437.325391280528
 
     disableModAblator = true
     heatShieldBaseCost = 0
@@ -390,28 +390,52 @@ ROThermal_PRESET
 ROThermal_PRESET
 {
     // not up to date
-    name = Dyna-Soar X-20
-    description = Dyna-Soar X-20 (Wings)
+    name = Dyna-Soar X-20 Wing
+    description = Belly Molybdenum with Q-Felt Insulation, rest Rene 41 bolted panels
     type = Skin
 
     skinMaxTemp = 1550 // based on information on Q-Fiber felt
     emissiveConstant = 0.90 // not sure if correct, usually it becomes lower with higher temperatures
 
     skinHeightMin = 0.006
-    skinMassPerArea = 17.019688
-    thermalInsulance = 43.2240316716726
-    skinSpecificHeatCapacity = 391.388712695556
+    skinMassPerArea = 9.444598
+    thermalInsulance = 29.7005114845001
+    skinSpecificHeatCapacity = 319.651332722951
 
     skinHeightMax = 0.012
-    skinMassPerAreaMax = 19.01172
-    thermalInsulanceMax = 107.980169618458
-    skinSpecificHeatCapacityMax = 408.644690117464
+    skinMassPerAreaMax = 11.560678
+    thermalInsulanceMax = 79.169871710605
+    skinSpecificHeatCapacityMax = 335.340980648144
 
     disableModAblator = true
     heatShieldBaseCost = 0
     costPerArea = 0
 }
 
+ROThermal_PRESET
+{
+    // not up to date
+    name = Dyna-Soar X-20 Fuselage
+    description = Belly Molybdenum with Q-Felt Insulation, rest Rene 41 bolted panels
+    type = Skin
+
+    skinMaxTemp = 1550 // based on information on Q-Fiber felt
+    emissiveConstant = 0.90 // not sure if correct, usually it becomes lower with higher temperatures
+
+    skinHeightMin = 0.006
+    skinMassPerArea = 8.78209
+    thermalInsulance = 13.5218775145996
+    skinSpecificHeatCapacity = 255.862810303925
+
+    skinHeightMax = 0.012
+    skinMassPerAreaMax = 10.13674
+    thermalInsulanceMax = 36.0098442840412
+    skinSpecificHeatCapacityMax = 318.413865000308
+
+    disableModAblator = true
+    heatShieldBaseCost = 0
+    costPerArea = 0
+}
 
 /////////////       Core       /////////////  /////////////  /////////////  /////////////  /////////////  /////////////  /////////////  
 ROThermal_PRESET
