--- a/GameData/ROLib/Temporary_patches.cfg
+++ b/GameData/ROLib/Temporary_patches.cfg
@@ -2,15 +2,15 @@
 /// Temporary patch for development dont forget to remove
 
 //// Dyna Soar
-@PART[ROC-DynaBayMoroz|ROC-DynaButtMoroz|ROC-DynaCabinMoroz|ROC-DynaElevonMoroz|ROC-DynaRudderMoroz|ROC-DynaWingMoroz|ROC-DynaSkid*]:FINAL
+@PART[|ROC-DynaElevonMoroz|ROC-DynaRudderMoroz|ROC-DynaWingMoroz|ROC-DynaSkid*]:FINAL
 {
     MODULE
     {
         name = ModuleROMaterials
         skinMassIsAdditive = false
         core = René 41
-        skin = Dyna-Soar X-20
-        availablePresetNamesSkin = Dyna-Soar X-20
+        skin = Dyna-Soar X-20 Wing
+        availablePresetNamesSkin = Dyna-Soar X-20 Wing
     }
 }
 @PART[ROC-DynaBayMoroz]:FINAL
@@ -29,5 +29,16 @@
         core = René 41
         skin = Dyna-Soar X-20 Cockpit
         availablePresetNamesSkin = Dyna-Soar X-20 Cockpit
+    }
+}
+@PART[ROC-DynaCabinMoroz|ROC-DynaBayMoroz|ROC-DynaButtMoroz]:FINAL
+{
+    MODULE
+    {
+        name = ModuleROMaterials
+        skinMassIsAdditive = false
+        core = René 41
+        skin = Dyna-Soar X-20 Fuselage
+        availablePresetNamesSkin = Dyna-Soar X-20 Fuselage
     }
 }
