- Implemented a workaround to wait for FARs voxelizaion when reading surface area - Default to fARAeroPartModule for surface area calculation - Removed no longer needed debug logs - Implemented a calculation to keep the thermal mass the same on TPS change

--- a/Source/ROLib/ROLib.csproj
+++ b/Source/ROLib/ROLib.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI\ModelSelectionGUI.cs" />
     <Compile Include="UI\ModelWindow.cs" />
+    <Compile Include="Utils\EditorCordinator.cs"/>
     <Compile Include="Utils\ProceduralTools\DragCubeTool.cs" />
     <Compile Include="Utils\ModuleDefinitionVariantSet.cs" />
     <Compile Include="Utils\ROLAttachNodeUtils.cs" />
