--- a/GameData/ROLib/Data/PresetsROMaterial.cfg
+++ b/GameData/ROLib/Data/PresetsROMaterial.cfg
@@ -364,23 +364,22 @@ ROThermal_PRESET
 
 ROThermal_PRESET
 {
-    // not up to date
     name = Dyna-Soar X-20 Cockpit
     description = Zirconia Nose & Molybdenum insulated with Q-Felt, rest bolted Rene 41 panels 
     type = Skin
 
     skinMaxTemp = 1800 // not sure if correct
-    emissiveConstant = 0.90 // not sure if correct, usually it becomes lower with higher temperatures
+    emissiveConstant = 0.88 // not sure if correct, usually value gets lower with higher temperatures
 
     skinHeightMin = 0.013
     skinMassPerArea = 11.743024
     thermalInsulance = 48.9023727825677
-    skinSpecificHeatCapacity = 333.710417572169
+    skinSpecificHeatCapacity = 323.96235104166
 
     skinHeightMax = 0.026
     skinMassPerAreaMax = 80.683026
     thermalInsulanceMax = 125.213380154277
-    skinSpecificHeatCapacityMax = 437.325391280528
+    skinSpecificHeatCapacityMax = 435.237396461052
 
     disableModAblator = true
     heatShieldBaseCost = 0
@@ -389,23 +388,22 @@ ROThermal_PRESET
 
 ROThermal_PRESET
 {
-    // not up to date
     name = Dyna-Soar X-20 Wing
     description = Belly Molybdenum with Q-Felt Insulation, rest Rene 41 bolted panels
     type = Skin
 
     skinMaxTemp = 1550 // based on information on Q-Fiber felt
-    emissiveConstant = 0.90 // not sure if correct, usually it becomes lower with higher temperatures
+    emissiveConstant = 0.88 // not sure if correct, usually value gets lower with higher temperatures
 
     skinHeightMin = 0.006
     skinMassPerArea = 9.444598
     thermalInsulance = 29.7005114845001
-    skinSpecificHeatCapacity = 319.651332722951
+    skinSpecificHeatCapacity = 308.19859147879
 
     skinHeightMax = 0.012
     skinMassPerAreaMax = 11.560678
     thermalInsulanceMax = 79.169871710605
-    skinSpecificHeatCapacityMax = 335.340980648144
+    skinSpecificHeatCapacityMax = 322.290418392857
 
     disableModAblator = true
     heatShieldBaseCost = 0
@@ -414,29 +412,172 @@ ROThermal_PRESET
 
 ROThermal_PRESET
 {
-    // not up to date
     name = Dyna-Soar X-20 Fuselage
     description = Belly Molybdenum with Q-Felt Insulation, rest Rene 41 bolted panels
     type = Skin
 
     skinMaxTemp = 1550 // based on information on Q-Fiber felt
-    emissiveConstant = 0.90 // not sure if correct, usually it becomes lower with higher temperatures
+    emissiveConstant = 0.88 // not sure if correct, usually value gets lower with higher temperatures
 
     skinHeightMin = 0.006
     skinMassPerArea = 8.78209
     thermalInsulance = 13.5218775145996
-    skinSpecificHeatCapacity = 255.862810303925
+    skinSpecificHeatCapacity = 242.831052198375
 
     skinHeightMax = 0.012
     skinMassPerAreaMax = 10.13674
     thermalInsulanceMax = 36.0098442840412
-    skinSpecificHeatCapacityMax = 318.413865000308
+    skinSpecificHeatCapacityMax = 300.002383445446
 
     disableModAblator = true
     heatShieldBaseCost = 0
     costPerArea = 0
 }
 
+ROThermal_PRESET
+{
+    name = Shuttle Early Cockpit
+    description = OV-102 Columbia
+    type = Skin
+
+    skinMaxTemp = 1920
+    emissiveConstant = 0.8055
+    absorptiveConstant = 0.32
+
+    skinHeightMin = 0.013
+    skinMassPerArea = 6.4497546
+    thermalInsulance = 115.60106972874
+    skinSpecificHeatCapacity = 1007.75724287951
+
+    skinHeightMax = 0.026
+    skinMassPerAreaMax = 23.695333
+    thermalInsulanceMax = 472.641519480023
+    skinSpecificHeatCapacityMax = 950.462469585931
+
+    disableModAblator = true
+    heatShieldBaseCost = 0
+    costPerArea = 0
+}
+ROThermal_PRESET
+{
+    name = Shuttle Cockpit
+    description = OV-103 Discovery
+    type = Skin
+
+    skinMaxTemp = 1920
+    emissiveConstant = 0.788
+    absorptiveConstant = 0.32
+
+    skinHeightMin = 0.013
+    skinMassPerArea = 4.7373846
+    thermalInsulance = 78.9815480433161
+    skinSpecificHeatCapacity = 1042.96485267911
+
+    skinHeightMax = 0.026
+    skinMassPerAreaMax = 17.379843
+    thermalInsulanceMax = 322.87153235468
+    skinSpecificHeatCapacityMax = 1016.85274158433
+
+    disableModAblator = true
+    heatShieldBaseCost = 0
+    costPerArea = 0
+}
+ROThermal_PRESET
+{
+    name = Shuttle Early Wing
+    description = OV-102 Columbia
+    type = Skin
+
+    skinMaxTemp = 1920
+    emissiveConstant = 0.7915
+    absorptiveConstant = 0.32
+
+    skinHeightMin = 0.006
+    skinMassPerArea = 5.334442632
+    thermalInsulance = 106.555757393798
+    skinSpecificHeatCapacity = 987.68501470017
+
+    skinHeightMax = 0.012
+    skinMassPerAreaMax = 19.28958356
+    thermalInsulanceMax = 412.797622850273
+    skinSpecificHeatCapacityMax = 949.524980480004
+
+    disableModAblator = true
+    heatShieldBaseCost = 0
+    costPerArea = 0
+}
+ROThermal_PRESET
+{
+    name = Shuttle Wing
+    description = OV-103 Discovery
+    type = Skin
+
+    skinMaxTemp = 1920
+    emissiveConstant = 0.7805
+    absorptiveConstant = 0.32
+
+    skinHeightMin = 0.006
+    skinMassPerArea = 4.212153864
+    thermalInsulance = 91.29026408964
+    skinSpecificHeatCapacity = 959.090414156845
+
+    skinHeightMax = 0.012
+    skinMassPerAreaMax = 15.664638352
+    thermalInsulanceMax = 395.168636833421
+    skinSpecificHeatCapacityMax = 958.303085132096
+
+    disableModAblator = true
+    heatShieldBaseCost = 0
+    costPerArea = 0
+}
+ROThermal_PRESET
+{
+    name = Shuttle Early Fuselage
+    description = OV-102 Columbia
+    type = Skin
+
+    skinMaxTemp = 1640
+    emissiveConstant = 0.72125
+    absorptiveConstant = 0.32
+
+    skinHeightMin = 0.006
+    skinMassPerArea = 3.9525215
+    thermalInsulance = 86.3005265126696
+    skinSpecificHeatCapacity = 1014.98074046258
+
+    skinHeightMax = 0.012
+    skinMassPerAreaMax = 16.8134875
+    thermalInsulanceMax = 303.101964008933
+    skinSpecificHeatCapacityMax = 1062.97408822643
+
+    disableModAblator = true
+    heatShieldBaseCost = 0
+    costPerArea = 0
+}
+ROThermal_PRESET
+{
+    name = Shuttle Fuselage
+    description = OV-103 Discovery
+    type = Skin
+
+    skinMaxTemp = 1640
+    emissiveConstant = 0.72125
+    absorptiveConstant = 0.32
+
+    skinHeightMin = 0.006
+    skinMassPerArea = 3.17264858
+    thermalInsulance = 67.2732611389465
+    skinSpecificHeatCapacity = 925.179468226447
+
+    skinHeightMax = 0.012
+    skinMassPerAreaMax = 14.50155548
+    thermalInsulanceMax = 364.675576810917
+    skinSpecificHeatCapacityMax = 1004.73218051338
+
+    disableModAblator = true
+    heatShieldBaseCost = 0
+    costPerArea = 0
+}
 /////////////       Core       /////////////  /////////////  /////////////  /////////////  /////////////  /////////////  /////////////  
 ROThermal_PRESET
 {
