Experimenting on presets based on properties, where the value of skinMaxTemp is set to average temperature across part, instead of localised maximum.

--- a/GameData/ROLib/Data/PresetsROMaterial.cfg
+++ b/GameData/ROLib/Data/PresetsROMaterial.cfg
@@ -373,13 +373,13 @@ ROThermal_PRESET
 
     skinHeightMin = 0.013
     skinMassPerArea = 11.743024
-    thermalInsulance = 48.9023727825677
-    skinSpecificHeatCapacity = 323.96235104166
+    thermalInsulance = 38.8973513265849
+    skinSpecificHeatCapacity = 308.474380021818
 
     skinHeightMax = 0.026
     skinMassPerAreaMax = 80.683026
-    thermalInsulanceMax = 125.213380154277
-    skinSpecificHeatCapacityMax = 435.237396461052
+    thermalInsulanceMax = 100.262687382494
+    skinSpecificHeatCapacityMax = 426.166746419619
 
     disableModAblator = true
     heatShieldBaseCost = 0
@@ -397,12 +397,12 @@ ROThermal_PRESET
 
     skinHeightMin = 0.006
     skinMassPerArea = 9.444598
-    thermalInsulance = 29.7005114845001
+    thermalInsulance = 29.6953271527029
     skinSpecificHeatCapacity = 308.19859147879
 
     skinHeightMax = 0.012
     skinMassPerAreaMax = 11.560678
-    thermalInsulanceMax = 79.169871710605
+    thermalInsulanceMax = 79.1620952129091
     skinSpecificHeatCapacityMax = 322.290418392857
 
     disableModAblator = true
@@ -421,13 +421,85 @@ ROThermal_PRESET
 
     skinHeightMin = 0.006
     skinMassPerArea = 8.78209
-    thermalInsulance = 13.5218775145996
+    thermalInsulance = 13.5132369616042
     skinSpecificHeatCapacity = 242.831052198375
 
     skinHeightMax = 0.012
     skinMassPerAreaMax = 10.13674
-    thermalInsulanceMax = 36.0098442840412
+    thermalInsulanceMax = 35.9994756204467
     skinSpecificHeatCapacityMax = 300.002383445446
+
+    disableModAblator = true
+    heatShieldBaseCost = 0
+    costPerArea = 0
+}
+
+ROThermal_PRESET
+{
+    name = Dyna-Soar X-20 Cockpit Avg
+    description = Zirconia Nose & Molybdenum insulated with Q-Felt, rest bolted Rene 41 panels 
+    type = Skin
+
+    skinMaxTemp = 1682.69519551943 // not sure if correct
+    emissiveConstant = 0.9 // not sure if correct, usually value gets lower with higher temperatures
+
+    skinHeightMin = 0.013
+    skinMassPerArea = 20.742106
+    thermalInsulance = 44.350914447524
+    skinSpecificHeatCapacity = 362.446626065314
+
+    skinHeightMax = 0.026
+    skinMassPerAreaMax = 23.376606
+    thermalInsulanceMax = 43.8476006767776
+    skinSpecificHeatCapacityMax = 362.446626065314
+
+    disableModAblator = true
+    heatShieldBaseCost = 0
+    costPerArea = 0
+}
+
+ROThermal_PRESET
+{
+    name = Dyna-Soar X-20 Wing Avg
+    description = Belly Molybdenum with Q-Felt Insulation, rest Rene 41 bolted panels
+    type = Skin
+
+    skinMaxTemp = 1509.67317062693 // based on information on Q-Fiber felt
+    emissiveConstant = 0.9 // not sure if correct, usually value gets lower with higher temperatures
+
+    skinHeightMin = 0.006
+    skinMassPerArea = 13.503184
+    thermalInsulance = 36.0285360953499
+    skinSpecificHeatCapacity = 329.874784954423
+
+    skinHeightMax = 0.012
+    skinMassPerAreaMax = 14.822684
+    thermalInsulanceMax = 36.0285360953499
+    skinSpecificHeatCapacityMax = 327.717108993216
+
+    disableModAblator = true
+    heatShieldBaseCost = 0
+    costPerArea = 0
+}
+
+ROThermal_PRESET
+{
+    name = Dyna-Soar X-20 Fuselage Avg
+    description = Belly Molybdenum with Q-Felt Insulation, rest Rene 41 bolted panels
+    type = Skin
+
+    skinMaxTemp = 1434.01173503487 // based on information on Q-Fiber felt
+    emissiveConstant = 0.9 // not sure if correct, usually value gets lower with higher temperatures
+
+    skinHeightMin = 0.006
+    skinMassPerArea = 8.104426
+    thermalInsulance = 20.4302598631103
+    skinSpecificHeatCapacity = 354.885604051416
+
+    skinHeightMax = 0.012
+    skinMassPerAreaMax = 9.880676
+    thermalInsulanceMax = 20.1733721087315
+    skinSpecificHeatCapacityMax = 334.885604051416
 
     disableModAblator = true
     heatShieldBaseCost = 0
@@ -446,12 +518,12 @@ ROThermal_PRESET
 
     skinHeightMin = 0.013
     skinMassPerArea = 6.4497546
-    thermalInsulance = 115.60106972874
+    thermalInsulance = 93.6702656680491
     skinSpecificHeatCapacity = 1007.75724287951
 
     skinHeightMax = 0.026
     skinMassPerAreaMax = 23.695333
-    thermalInsulanceMax = 472.641519480023
+    thermalInsulanceMax = 382.359141738313
     skinSpecificHeatCapacityMax = 950.462469585931
 
     disableModAblator = true
@@ -465,7 +537,7 @@ ROThermal_PRESET
     type = Skin
 
     skinMaxTemp = 1920
-    emissiveConstant = 0.788
+    emissiveConstant = 0.8055
     absorptiveConstant = 0.32
 
     skinHeightMin = 0.013
@@ -494,12 +566,12 @@ ROThermal_PRESET
 
     skinHeightMin = 0.006
     skinMassPerArea = 5.334442632
-    thermalInsulance = 106.555757393798
+    thermalInsulance = 76.1018459488614
     skinSpecificHeatCapacity = 987.68501470017
 
     skinHeightMax = 0.012
     skinMassPerAreaMax = 19.28958356
-    thermalInsulanceMax = 412.797622850273
+    thermalInsulanceMax = 310.640902750729
     skinSpecificHeatCapacityMax = 949.524980480004
 
     disableModAblator = true
@@ -513,7 +585,7 @@ ROThermal_PRESET
     type = Skin
 
     skinMaxTemp = 1920
-    emissiveConstant = 0.7805
+    emissiveConstant = 0.7915
     absorptiveConstant = 0.32
 
     skinHeightMin = 0.006
@@ -542,12 +614,12 @@ ROThermal_PRESET
 
     skinHeightMin = 0.006
     skinMassPerArea = 3.9525215
-    thermalInsulance = 86.3005265126696
+    thermalInsulance = 60.252304792392
     skinSpecificHeatCapacity = 1014.98074046258
 
     skinHeightMax = 0.012
     skinMassPerAreaMax = 16.8134875
-    thermalInsulanceMax = 303.101964008933
+    thermalInsulanceMax = 229.307036791749
     skinSpecificHeatCapacityMax = 1062.97408822643
 
     disableModAblator = true
@@ -573,6 +645,54 @@ ROThermal_PRESET
     skinMassPerAreaMax = 14.50155548
     thermalInsulanceMax = 364.675576810917
     skinSpecificHeatCapacityMax = 1004.73218051338
+
+    disableModAblator = true
+    heatShieldBaseCost = 0
+    costPerArea = 0
+}
+ROThermal_PRESET
+{
+    name = Shuttle Early Cockpit Avg
+    description = OV-102
+    type = Skin
+
+    skinMaxTemp = 1717.78289474407
+    emissiveConstant = 0.834
+    absorptiveConstant = 0.32
+
+    skinHeightMin = 0.013
+    skinMassPerArea = 11.166000214
+    thermalInsulance = 170.04408326752
+    skinSpecificHeatCapacity = 1146.72020334696
+
+    skinHeightMax = 0.026
+    skinMassPerAreaMax = 25.2580655
+    thermalInsulanceMax = 322.87153235468
+    skinSpecificHeatCapacityMax = 1016.85274158433
+
+    disableModAblator = true
+    heatShieldBaseCost = 0
+    costPerArea = 0
+}
+ROThermal_PRESET
+{
+    name = Shuttle Early Wing Avg
+    description = OV-102
+    type = Skin
+
+    skinMaxTemp = 1651.72220343478
+    emissiveConstant = 0.7915
+    absorptiveConstant = 0.32
+
+    skinHeightMin = 0.006
+    skinMassPerArea = 9.8754541424
+    thermalInsulance = 164.814838363491
+    skinSpecificHeatCapacity = 1060.14031641617
+
+    skinHeightMax = 0.012
+    skinMassPerAreaMax = 15.664638352
+    thermalInsulanceMax = 395.168636833421
+    skinSpecificHeatCapacityMax = 958.303085132096
 
     disableModAblator = true
     heatShieldBaseCost = 0
