--- a/GameData/ROLib/Temporary_patches.cfg
+++ b/GameData/ROLib/Temporary_patches.cfg
@@ -10,7 +10,7 @@
         skinMassIsAdditive = false
         core = René 41
         skin = Dyna-Soar X-20 Wing
-        availablePresetNamesSkin = Dyna-Soar X-20 Wing
+        skinPresets = Dyna-Soar X-20 Wing, Dyna-Soar X-20 Wing Avg
     }
 }
 @PART[ROC-DynaBayMoroz]:FINAL
@@ -28,7 +28,7 @@
         skinMassIsAdditive = false
         core = René 41
         skin = Dyna-Soar X-20 Cockpit
-        availablePresetNamesSkin = Dyna-Soar X-20 Cockpit
+        skinPresets = Dyna-Soar X-20 Cockpit, Dyna-Soar X-20 Cockpit Avg
     }
 }
 @PART[ROC-DynaCabinMoroz|ROC-DynaBayMoroz|ROC-DynaButtMoroz]:FINAL
@@ -39,7 +39,7 @@
         skinMassIsAdditive = false
         core = René 41
         skin = Dyna-Soar X-20 Fuselage
-        availablePresetNamesSkin = Dyna-Soar X-20 Fuselage
+        skinPresets = Dyna-Soar X-20 Fuselage, Dyna-Soar X-20 Fuselage Avg
     }
 }
 
@@ -52,7 +52,7 @@
 		%core = Alluminium Alloy 2024
 		%skin = Dyna-Soar X-20 Wing
         %corePresets = Alluminium Alloy 2024
-        %skinPresets = None, Dyna-Soar X-20 Wing, Shuttle Early Wing, Shuttle Wing, HSRI LI-2200, HSRI LI-900, HSRI LI-2200 & LI-900, HSRI+RCC, Apollo_CM, LRSI LI-900, RCC, HSRI FRCI-12, Orion_CM, Dyna-Soar X-20
+        %skinPresets = None, Dyna-Soar X-20 Wing, Shuttle Early Wing, Shuttle Early Wing Avg, Shuttle Wing, HSRI LI-2200, HSRI LI-900, HSRI LI-2200 & LI-900, HSRI+RCC, Apollo_CM, LRSI LI-900, RCC, HSRI FRCI-12, Orion_CM, Dyna-Soar X-20
     }
 
 }
@@ -64,7 +64,7 @@
 		%core = Alluminium Alloy 2024
 		%skin = Shuttle Early Cockpit
         %corePresets = Alluminium Alloy 2024
-        %skinPresets = Shuttle Early Cockpit, Shuttle Cockpit, Dyna-Soar X-20 Cockpit
+        %skinPresets = Shuttle Early Cockpit, Shuttle Cockpit, Shuttle Early Cockpit Avg, Dyna-Soar X-20 Cockpit
     }
 }
 @PART[mk3CrewCabin|mk3CargoBay*|mk3CargoRamp|adapterEngines|mk3Fuselage*|ShuttleCargo|ShuttleEngMount]:FINAL
