Switched multidimensional arrays with more performant jagged array

--- a/GameData/ROLib/Data/PartUpgradeROMaterial.cfg
+++ b/GameData/ROLib/Data/PartUpgradeROMaterial.cfg
@@ -5,5 +5,32 @@ PARTUPGRADE
 	partIcon = ROH-AdjustableHS
 	techRequired = matureCapsules
 	title = Apollo Comand Module TPS
-	description = Unlocks Apollo Comand Module TPS technology designed for Lunar
+	description = TODO
+}
+PARTUPGRADE
+{
+	// WARNING: name must be equal to preset name!!
+	name = Shuttle Early Cockpit
+	partIcon = ROH-AdjustableHS
+	techRequired = materialsScienceSpaceplanes
+	title = TODO
+	description = TODO
+}
+PARTUPGRADE
+{
+	// WARNING: name must be equal to preset name!!
+	name = Shuttle Early Fuselage
+	partIcon = ROH-AdjustableHS
+	techRequired = materialsScienceSpaceplanes
+	title = TODO
+	description = TODO
+}
+PARTUPGRADE
+{
+	// WARNING: name must be equal to preset name!!
+	name = Shuttle Early Wing
+	partIcon = ROH-AdjustableHS
+	techRequired = materialsScienceSpaceplanes
+	title = TODO
+	description = TODO
 }
