--- a/Source/ROLib/ROLib.csproj
+++ b/Source/ROLib/ROLib.csproj
@@ -39,7 +39,20 @@
     <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="0Harmony">
+      <SpecificVersion>False</SpecificVersion>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="Assembly-CSharp">
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="FerramAerospaceResearch">
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="RealFuels">
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="RP0">
       <Private>False</Private>
     </Reference>
     <Reference Include="System">
@@ -86,6 +99,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Harmony.cs" />
     <Compile Include="DebugTools\DebugDrawer.cs" />
     <Compile Include="DebugTools\DrawTools.cs" />
     <Compile Include="GlobalSuppressions.cs" />
